--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
 
   <name>validate Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <!--<url>http://www.example.com</url>-->
 
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
       <!-- spring版本号 -->
       <spring.version>4.3.5.RELEASE</spring.version>
 
@@ -148,21 +148,13 @@
           <version>1.0.12</version>
       </dependency>
 
+
+
+      <!--jackson common-->
       <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-core</artifactId>
           <version>2.8.5</version>
-      </dependency>
-
-      <dependency>
-          <groupId>com.fasterxml.jackson.jaxrs</groupId>
-          <artifactId>jackson-jaxrs-xml-provider</artifactId>
-          <version>2.4.1</version>
-      </dependency>
-      <dependency>
-          <groupId>org.codehaus.jackson</groupId>
-          <artifactId>jackson-mapper-asl</artifactId>
-          <version>1.9.4</version>
       </dependency>
       <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -174,6 +166,28 @@
           <artifactId>jackson-annotations</artifactId>
           <version>2.8.5</version>
       </dependency>
+
+      <!--jackson xml-->
+      <!--<dependency>-->
+          <!--<groupId>org.codehaus.jackson</groupId>-->
+          <!--<artifactId>jackson-mapper-asl</artifactId>-->
+          <!--<version>1.9.4</version>-->
+      <!--</dependency>-->
+      <!--<dependency>-->
+          <!--<groupId>com.fasterxml.jackson.jaxrs</groupId>-->
+          <!--<artifactId>jackson-jaxrs-xml-provider</artifactId>-->
+          <!--<version>2.4.1</version>-->
+      <!--</dependency>-->
+
+
+      <!--jackson json-->
+      <dependency>
+          <groupId>com.fasterxml.jackson.jaxrs</groupId>
+          <artifactId>jackson-jaxrs-json-provider</artifactId>
+          <version>2.4.1</version>
+      </dependency>
+
+
       <dependency>
           <groupId>com.alibaba</groupId>
           <artifactId>fastjson</artifactId>
@@ -208,13 +222,40 @@
           <version>4.0.0</version>
       </dependency>
 
-      <!-- mybatis分页插件依赖 -->
       <dependency>
-          <groupId>com.github.pagehelper</groupId>
-          <artifactId>pagehelper</artifactId>
-          <version>4.0.0</version>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-validator</artifactId>
+          <version>5.2.0.Final</version>
+      </dependency>
+      <!--jsr 303-->
+      <dependency>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+          <version>1.1.0.Final</version>
       </dependency>
 
+      <dependency>
+          <groupId>javax.el</groupId>
+          <artifactId>javax.el-api</artifactId>
+          <version>2.2.4</version>
+      </dependency>
+      <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>javax.el</artifactId>
+          <version>2.2.4</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>25.0-jre</version>
+      </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.0</version>
+          <scope>provided</scope>
+          <!--编译测试有效生成class，运行期用不上-->
+      </dependency>
   </dependencies>
 
   <build>
@@ -260,6 +301,17 @@
               <configuration>
                   <verbose>true</verbose>
                   <overwrite>true</overwrite>
+              </configuration>
+          </plugin>
+
+          <plugin>
+              <groupId>org.apache.tomcat.maven</groupId>
+              <artifactId>tomcat7-maven-plugin</artifactId>
+              <version>2.2</version>
+              <configuration>
+                  <path>/</path>
+                  <port>80</port>
+                  <uriEncoding>UTF-8</uriEncoding>
               </configuration>
           </plugin>
 
