--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/vip
+jdbc.url=jdbc:mysql://localhost:3306/lxk
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
 #定义初始连接数
 initialSize=0
 #定义最大连接数
