--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
     <context-param> <!--全局范围内环境参数初始化-->
         <param-name>contextConfigLocation</param-name>          <!--参数名称-->
-        <param-value>classpath:spring-mybatis.xml</param-value>     <!--参数取值-->
+        <param-value>classpath:spring-core.xml</param-value>     <!--参数取值-->
     </context-param>
 
     <!--以下配置的加载顺序:先 ServletContext >> context-param >> listener >> filter >> servlet >>  spring-->
@@ -30,11 +30,15 @@
         <url-pattern>/*</url-pattern>       <!--指定filter所对应的URL-->
     </filter-mapping>
 
+
     <!-- -监听器配置 -->
     <!--例:spring监听器-->
     <listener>        <!--用来设定Listener接口-->
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class><!--定义Listener的类名称-->
     </listener>
+
+
+
     <!-- 防止Spring内存溢出监听器  -->
     <listener>
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
@@ -46,7 +50,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> <!--指定servlet的类名称,这里配置了前端控制器-->
         <init-param><!--用来定义参数,可有多个init-param。在servlet类中通过getInitParamenter(String name)方法访问初始化参数    -->
             <param-name>contextConfigLocation</param-name>  <!--参数名称-->
-            <param-value>classpath:spring-mvc.xml</param-value> <!--参数值-->
+            <param-value>classpath:spring-servlet.xml</param-value> <!--参数值-->
         </init-param>
         <load-on-startup>1</load-on-startup><!--当值为正数或零时：Servlet容器先加载数值小的servlet，再依次加载其他数值大的servlet.-->
         <async-supported>true</async-supported><!--设置是否启用异步支持-->
