--- a/pom.xml
+++ b/pom.xml
@@ -284,6 +284,18 @@
           <version>3.9.0</version>
       </dependency>
 
+      <!--redis客户端 jedis -->
+      <dependency>
+          <groupId>redis.clients</groupId>
+          <artifactId>jedis</artifactId>
+          <version>2.9.0</version>
+      </dependency>
+      <!--redis 分布式锁 https://mvnrepository.com/artifact/org.redisson/redisson -->
+      <dependency>
+          <groupId>org.redisson</groupId>
+          <artifactId>redisson</artifactId>
+          <version>3.7.5</version>
+      </dependency>
   </dependencies>
 
   <build>
