--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,16 @@
           <artifactId>hibernate-validator</artifactId>
           <version>5.2.0.Final</version>
       </dependency>
+      <!--<dependency>-->
+          <!--<groupId>org.hibernate.validator</groupId>-->
+          <!--<artifactId>hibernate-validator</artifactId>-->
+          <!--<version>6.0.10.Final</version>-->
+      <!--</dependency>-->
+      <!--<dependency>-->
+          <!--<groupId>org.hibernate</groupId>-->
+          <!--<artifactId>hibernate-validator</artifactId>-->
+          <!--<version>5.4.1.Final</version>-->
+      <!--</dependency>-->
       <!--jsr 303-->
       <dependency>
           <groupId>javax.validation</groupId>
@@ -296,6 +306,7 @@
           <artifactId>redisson</artifactId>
           <version>3.7.5</version>
       </dependency>
+
   </dependencies>
 
   <build>
