--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -5,4 +5,9 @@ user.name.illegal=用户名必须是字母
 user.password.null=密码不能为空  
 custom.phone.invalid=电话号码非法
 custom.pwd.invalid=密码非法
-custom.value.invalid=value非法
+custom.value.invalid=value非法 
+forbidden.word=您输入的数据中有非法关键词【{validatedValue}】【{word}】【{invalidValue}】【{rejectedValue}】
+forbidden.word2=您输入的数据中有非法关键词【{validatedValue}】【{word}】【{invalidValue}】【{rejectedValue}】
+custom.nickname.length.invalid=用户名${validatedValue}长度必须在{min}到{max}之间,此时${validatedValue.length()>min ? '大于':'小于'} ${min}，{max},min 值为 ${formatter.format("%010d", min)}
+password.confirmation.null=2次密码不一致null
+password.confirmation.error=2次密码不一致error
