--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -12,4 +12,5 @@ test.email.error=testEmail错误22
 custom.nickname.length.invalid=用户名${validatedValue}长度必须在{min}到{max}之间,此时${validatedValue.length()>min ? '大于':'小于'} ${min}，{max},min 值为 ${formatter.format("%010d", min)}
 password.confirmation.null=2次密码不一致null
 password.confirmation.error=2次密码不一致2error2
+password.confirmation.error2=2次密码不一致2error222222222
 password.confirmation.error.crossParameter=2次密码不一致CrossParameter
