--- a/pom.xml
+++ b/pom.xml
@@ -307,6 +307,13 @@
           <version>3.7.5</version>
       </dependency>
 
+
+      <dependency>
+          <groupId>net.sf.json-lib</groupId>
+          <artifactId>json-lib</artifactId>
+          <version>2.2.3</version>
+          <classifier>jdk15</classifier>
+      </dependency>
   </dependencies>
 
   <build>
