--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,18 @@
 
     <display-name>Archetype Created Web Application</display-name>
 
+    <filter>
+        <filter-name>crossFilter</filter-name>
+        <filter-class>lxk.framework.CrossFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>crossFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
+
     <context-param> <!--全局范围内环境参数初始化-->
         <param-name>contextConfigLocation</param-name>          <!--参数名称-->
         <param-value>classpath:spring-core.xml</param-value>     <!--参数取值-->
